--- a/experiments/app-interface/v2/assets/stylesheets/card-left.css
+++ b/experiments/app-interface/v2/assets/stylesheets/card-left.css
@@ -58,17 +58,21 @@
 }
 
 #qrcode-bg {
-  background-position: 50% 80%;
+  background-position: 50% 100%;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 125%;
 }
 
-.show-when-running {
+.add-when-running {
   display: none;
 }
 
-#main.running .show-when-running {
-  display: block;
+#main.running .add-when-running {
+  display: inline;
+}
+
+#main.running .remove-when-running{
+  display: none;
 }
 
 #stopBtn {
