Added settings screen

--- a/experiments/app-interface/v2/assets/stylesheets/main.css
+++ b/experiments/app-interface/v2/assets/stylesheets/main.css
@@ -5,7 +5,6 @@
 .main {
   position: absolute;
   width: 1000px;
-  /*height: 300*/
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
@@ -25,7 +24,7 @@
   border: none;
 }
 
-.card, .card select, .card input {
+.card, .card select, .card input, .card textarea{
   background-color: #f2f2f2;
 }
 
