--- a/experiments/app-interface/v2/assets/stylesheets/card-left.css
+++ b/experiments/app-interface/v2/assets/stylesheets/card-left.css
@@ -8,7 +8,6 @@
   border-radius: 3px;
   border-width: 2px;
   border-style: solid;
-  background-color: transparent;
   -webkit-transition: 0.1s background-color linear, 0.1s color linear;
   -moz-transition: 0.1s background-color linear, 0.1s color linear;
   -o-transition: 0.1s background-color linear, 0.1s color linear;
@@ -19,9 +18,7 @@
   font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
-  /*text-align: block;*/
   font-size: 12pt;
-  /*color: #4a4a4a;*/
   margin-bottom: 15px;
 }
 
@@ -45,7 +42,7 @@
  * Main running
  */
 
-#settingsBtn{
+#btn-settings{
   margin-bottom: 15px;
 }
 
@@ -58,7 +55,7 @@
 }
 
 #qrcode-bg {
-  background-position: 50% 75%;
+  background-position: 50% 70%;
   background-repeat: no-repeat;
   background-size: 125%;
 }
@@ -68,148 +65,16 @@
 }
 
 #main.running .add-when-running {
-  display: inline;
+  display: block;
 }
 
 #main.running .remove-when-running{
   display: none;
 }
 
-#stopBtn {
+#btn-stop {
   position: absolute;
   bottom: 10px;
   left: 50%;
   transform: translateX(-50%);
-}
-
-
-
-
-
-
-
-
-
-
-
-/*
-
-#rhs.qrcode .mask {
-  background-color: rgba(168,168,168,.54);
-}
-
-#rhs.invalid .mask {
-  background-color: rgba(112,0,0,.54);
-}
-
-#rhs-qrcode-msg {
-  display: none;
-  position: absolute;
-  width: 100%;
-  top: 85%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 24px !important;
-  text-align: center;
-}
-
-#rhs.qrcode #rhs-qrcode-msg {
-  display: block;
-}
-
-#rhs h2 {
-  font-family: 'Lato' !important;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  text-align: block;
-  font-size: 16px;
-}
-
-
-
-#rhs #logo {
-  position: absolute;
-  width: 75%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#rhs #rhs-invalid-msg {
-  position: absolute;
-  width: 75%;
-  top: 75%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-#qrcode img {
-  position: absolute;
-  width: 50%;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 80%;
-}
-
-#rhs.qrcode #logo {
-  display: none;
-}
-*/
-/*---------------------------------------------------------------------------*/
-
-/*.card .view {
-  -webkit-border-top-left-radius: 10px;
-  border-top-left-radius: 10px;
-  -webkit-border-top-right-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.card .view .mask {
-  text-align: center;
-  display : flex;
-  align-items : center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.card-img-top {
-  width: 360px;
-  height: 360px;
-
-  background-image: url('../images/album-cover.jpg');
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-
-  cursor: pointer;
-}
-
-#pButton {
-  color: rgba(255,255,255,0.85);
-  font-size: 200px;
-}
-
-.card .view .mask:hover #pButton {
-  color: rgba(255,255,255,0.65);
-}
-
-.sermon-title {
-  color: #a70202;
-  font-family: 'Lato' !important;
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  text-align: block;
-  font-size: 16px;
-}
-.sermon-subtitle {
-  font-family: 'Libre Baskerville' !important;
-  font-weight: 400;
-  font-style: normal;
-  letter-spacing: 0px;
-  font-size: 13px;
 }
