Make settings interactive

--- a/experiments/app-interface/v2/assets/stylesheets/settings.css
+++ b/experiments/app-interface/v2/assets/stylesheets/settings.css
@@ -9,3 +9,19 @@
 #main.settings .card-group {
 	display: none;
 }
+
+#settings input:disabled, #settings textarea:disabled, #settings select:disabled {
+	opacity: 0.3;
+}
+
+#settings .input-group.disabled {
+	opacity: 0.3;	
+}
+
+#settings .input-group.disabled input:disabled {
+	opacity: 1.0;	
+}
+
+#settings .disabled-no-opacity {
+	opacity: 1.0 !important;
+}
