--- a/experiments/app-interface/v2/assets/stylesheets/card-right.css
+++ b/experiments/app-interface/v2/assets/stylesheets/card-right.css
@@ -29,6 +29,24 @@
   background-color: rgba(112,0,0,.54);
 }
 
+.btn-type-qr {
+  position: absolute;
+  left: 50%;
+  top: 75%;
+  transform: translate(-50%,-50%);
+  display: none;
+}
+
+.btn-type-qr .btn {
+  font-family: 'Lato' !important;
+  /*font-style: normal;*/
+  /*font-weight: 700;*/
+  /*letter-spacing: 1px;*/
+  text-transform: uppercase;
+  /*font-size: 12pt;*/
+  padding: 13px 26px;
+}
+
 .rhs-invalid-msg {
   position: absolute;
   width: 75%;
@@ -42,4 +60,8 @@
 
 #main.invalid .rhs-invalid-msg {
   display: block;
+}
+
+#main.running .btn-type-qr {
+  display: inline-flex;
 }
