--- a/experiments/site/assets/stylesheets/card.css
+++ b/experiments/site/assets/stylesheets/card.css
@@ -57,3 +57,12 @@
   letter-spacing: 0px;
   font-size: 13px;
 }
+
+
+#qrcode img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+}
