--- a/experiments/site/assets/stylesheets/card.css
+++ b/experiments/site/assets/stylesheets/card.css
@@ -16,6 +16,9 @@
   display : flex;
   align-items : center;
   justify-content: center;
+}
+
+.cursor {
   cursor: pointer;
 }
 
@@ -32,6 +35,10 @@
 }
 
 #pButton {
+    color: #222222;
+}
+
+.mask > #pButton {
   color: rgba(255,255,255,0.85);
   font-size: 200px;
 }
@@ -49,6 +56,7 @@
   text-transform: uppercase;
   text-align: block;
   font-size: 16px;
+
 }
 .sermon-subtitle {
   font-family: 'Libre Baskerville' !important;
@@ -56,6 +64,9 @@
   font-style: normal;
   letter-spacing: 0px;
   font-size: 13px;
+
+  
+  color: rgba(26,26,26,.7);
 }
 
 
