--- a/components/site/src/index.html
+++ b/components/site/src/index.html
@@ -16,6 +16,26 @@
   <!-- <link href="assets/stylesheets/site.css" rel="stylesheet"> -->
   <!-- <link href="assets/stylesheets/card.css" rel="stylesheet"> -->
   <link href="assets/stylesheets/app.min.css" rel="stylesheet">
+
+
+  <link rel="icon" href="assets/images/favicon-32.png" sizes="32x32">
+  <link rel="icon" href="assets/images/favicon-57.png" sizes="57x57">
+  <link rel="icon" href="assets/images/favicon-76.png" sizes="76x76">
+  <link rel="icon" href="assets/images/favicon-96.png" sizes="96x96">
+
+  <link rel="icon" href="assets/images/favicon-144.png" sizes="144x144">
+  <link rel="icon" href="assets/images/favicon-195.png" sizes="195x195">
+
+  <link rel="icon" href="assets/images/favicon-128.png" sizes="128x128">
+  <link rel="icon" href="assets/images/favicon-192.png" sizes="192x192">
+  <link rel="icon" href="assets/images/favicon-228.png" sizes="228x228">
+
+  <link rel="shortcut icon" href="assets/images/favicon-196.png" sizes="196x196">
+
+  <link rel="apple-touch-icon" href="assets/images/favicon-120.png" sizes="120x120">
+  <link rel="apple-touch-icon" href="assets/images/favicon-152.png" sizes="152x152">
+  <link rel="apple-touch-icon" href="assets/images/favicon-167.png" sizes="167x167">
+  <link rel="apple-touch-icon" href="assets/images/favicon-180.png" sizes="180x180">
 </head>
 
 <body>
